FEED-161: Fix alignment for ie11
Why:

On IE11, the flex: 2 on the alert body causes issue on vertically align flexbox. In that it thinks the element with flex: 2 doesn't have a height.

This change addresses the need by:

Switch to display block instead. For our purposes, it'll be the same.

--- a/src/alert/styles.css
+++ b/src/alert/styles.css
@@ -25,7 +25,7 @@ $text-hover-lightness: 65;
     }
 
     &.verticalLayout {
-      flex-direction: column;
+      display: block;
 
       .action {
         padding-top: 0.75rem;
